<resources>
    <string name="app_name">RentalApplication</string>
    <string name="rental_app">Rental App</string>
    <string name="by">By</string>
    <string name="rabina_shahi">Rabina Shahi</string>
    <string name="rentalHeading">Find Best Place For Your Stay</string>
    <string name="signup">SignUp</string>
    <string name="already_sign_up">Already Sign up???..</string>
    <string name="login">Login</string>
    <string name="btnsignup">SignUp</string>
    <string name="btnLogin">Login</string>
    <string name="login_title">login</string>
    <string name="phone">Phone Number</string>
    <string name="password">password</string>
    <string name="lowPrice">lowPrice</string>
    <string name="highPrice">HighPrice</string>
    <string name="submit">Submit</string>
    <string name="name">Enter Your Name</string>
    <string name="user_profile">User Profile</string>
    <string name="all_chat">All Chat</string>
    <string name="chat">Chat</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quote">"If you know you are going home the journey is never to hard"</string>
    <string name="ChatOwner">ChatWithOwner</string>

</resources>