<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/red"
        android:id="@+id/IndividualProfiletoolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/IndividualProfilebackImage"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:background="#00FFFFFF"
                android:layout_centerVertical="true"
                />


            <TextView
                android:id="@+id/IndividualChattoolbarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/IndividualProfilebackImage"
                android:paddingStart="25dp"
                android:paddingEnd="15dp"
                android:text="Users Profile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/profileTopic"
        android:layout_below="@+id/IndividualProfiletoolbar"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/userProfilePicture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/profileTopic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/userProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfilePicture"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/saveProfileData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_below="@id/userProfileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="18sp"

        />

</RelativeLayout>